# todo

./: .gitignore  CMakeLists.txt  README.md  sqlite3_install.sh
app/: CMakeLists.txt  app.cpp
html/: add_task_failure.html  add_task_page.html  add_task_success.html  index.html  style.css
include/todo_app/: core_app.hpp  date.hpp  sqlite_database.hpp  todo_item.hpp  uid_generator.hpp
src/: CMakeLists.txt  core_app_impl.cpp  date_impl.cpp  sqlite_database_impl.cpp  todo_item_impl.cpp  uid_generator_impl.cpp
